Bug 1235899 - Don't allow frame reconstruction to clobber the APZ scroll offset. r=botond

MozReview-Commit-ID: HZMavMJNtmq